# sauvc_sim

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  package.xml
docker/: Dockerfile
launch/: empty_world.launch  sauvc.launch  sauvc25_launch.py
models/blue_drum/: model.sdf
models/camera/: model.sdf
models/demo_auv/: model.config  model.sdf
models/depth_camera/: model.sdf
models/drum/: model.sdf
models/gate/: model.sdf
models/golf_ball/: model.sdf
models/green_mat/: model.sdf
models/orca/: model.sdf
models/q_gate/: model.sdf
models/red_drum/: model.sdf
models/red_flare/: model.sdf
models/starting_zone/: model.sdf
scripts/: entity_spawner.py  teleop25.py
src/: teleop.py
worlds/: sauvc.world  sauvc25.world
